2016-03-16  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* README.md: Fix README Packaging section

2016-03-16  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* CMakeLists.txt, ChangeLog, recognizers.xml: Add a new long press
	to fix combobox problems with firefox

2016-03-08  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* CMakeLists.txt, ChangeLog: Bump version

2016-03-03  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* ChangeLog, eta_gestemas: Fix multi-user startup problem

2016-03-03  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* recognizers.xml: Make target LibreOffice 4.3 public

2016-02-29  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* CMakeLists.txt, ChangeLog, recognizers.xml: Reverse swipe
	direction for libre impress

2016-02-26  Gökhan Gurbetoğlu <gokhan@pardus.org.tr>

	* lib/TargetFactory/target.cpp: Small fix: 'distroyed' ->
	'destroyed'

2016-02-26  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* CMakeLists.txt, ChangeLog: Bump version number to 0.1.3

2016-02-26  Gökhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* lib/GestureRecognizer/swipegesturerecognizer.cpp, recognizers.xml: 
	Fix swipe up & down direction

2016-02-22  Gokhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* recognizers.xml: Add new targets

2016-02-16  Gokhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* README.md: Update README

2016-02-15  Gokhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* lib/GestureRecognizer/gesturerecognizer.cpp,
	lib/TouchManager/libframetouchmanager.cpp: Fix a typo

2016-02-05  Gokhan Karabulut <gokhan.karabulut@tubitak.gov.tr>

	* README.md, cmake/FindFrame.cmake,
	lib/GestureListener/dbusvirtualkeyboard.cpp,
	lib/GestureListener/dbusvirtualkeyboard.h,
	lib/GestureListener/dbvirtualkeyboard.cpp,
	lib/GestureListener/gesturelistener.h,
	lib/GestureListener/simplegesturelistener.cpp,
	lib/GestureListener/simplegesturelistener.h,
	lib/GestureListener/xtest.cpp, lib/GestureListener/xtest.h,