@@ -25,7 +25,7 @@ set(GESTEMAS_CONFIG_USER_PATH
 # Project version
 set(GESTEMAS_VERSION_MAJOR 0)
 set(GESTEMAS_VERSION_MINOR 1)
-set(GESTEMAS_VERSION_PATCH 7)
+set(GESTEMAS_VERSION_PATCH 8)
 set(GESTEMAS_VERSION
   "${GESTEMAS_VERSION_MAJOR}.${GESTEMAS_VERSION_MINOR}.${GESTEMAS_VERSION_PATCH}")
 
